@@ -4,6 +4,7 @@
 - Expose message id in Python MosquittoMessage.
 - Python MosquittoMessage payload parameter is now a Python string, not a
   ctypes object which makes it much easier to use.
+- C++ library is now in its own namespace, mosquittopp.
 
 0.12 - 20110725
 ===============
